# netherlands-weather-map

./: README.md  Weather_scraper.py  pyproject.toml  weather_scraper.py
main_project/: weather_scraper.py
tests/: test_bbc_weather_scraper.py  test_dutch_coordinates.py  test_map_generator.py  test_marker_colour.py  test_weather_array_stacker.py  test_weather_scraper.py
