[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "netherlands_weather_scraper"
version = "0.1.0"
description = "Package that creates a map of the current weather in the netherlands by scraping BBC weather urls"
authors = [ 
    {name = "Marginean Marius-Andrei", email = "mmarginean@tudelft.nl"},
]
dependencies = ["beautifulsoup4>4.12.3", "requests>2.28.2", "folium>0.17.0", re]